# PKGCache

./: .env.example  .gitignore  README.md  docker-compose.yml
certs/: ca.crt
config/: Caddyfile  apt-cacher-ng-apk.conf  verdaccio-config.yaml  zot-config.json  zot-config.offline.json
demo/: index.html
design_handoff_checkpoint_transfer/: Checkpoint Transfer Widget.dc.html  README.md
docs/: api.md  artifacts.md  docker-builds.md  git-cache.md  multi-project.md  refactor-plan.md
engineering-conventions/: SKILL.md
engineering-conventions/references/: guidelines.md
pkgcache/: .dockerignore  Dockerfile  pkgcache.yaml  pyproject.toml  seed.example.yaml  usage.md
pkgcache/src/pkgcache/: __init__.py  __main__.py  app.py  repositories.py  router.py  unified.py
pkgcache/src/pkgcache/core/: __init__.py  cache.py  config.py  gitmirror.py  inflight.py  ledger.py  progress.py  repository.py  stats.py  storage.py  upstream.py
pkgcache/src/pkgcache/handlers/: __init__.py  apt.py  common.py  files.py  git.py  npm.py  oci.py  pypi.py
pkgcache/tests/: test_cas.py  test_ledger_api.py  test_router.py  test_unified.py
scripts/: bootstrap.sh  cas_dedupe.py  checkpoint.sh  export-shuttle.sh  gen-certs.sh  gen_manifest.py  import-airgap.sh  pkgops.py  prefetch.py  serve-ui.sh
webui/: Dockerfile  config.py  index.html  jobs.py  live.py  lockwarm.py  ops.py  projects.py  reads.py  server.py  test_lockwarm.py  test_multiproject.py  test_projects.py  usage.py
webui/app/: __init__.py  errors.py  main.py  manifest.py  settings.py  urls.py
webui/console/: .eslintrc.cjs  (+7 more)
(+57 files in other folders)
