[project]
name = "pkgcache"
version = "0.1.0"
description = "One Python codebase for four pull-through package caches (OCI / npm / PyPI / apt+apk)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "aiofiles>=23.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Test suite (pkgcache/tests). Install with: pip install -e '.[test]'
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
pkgcache = "pkgcache.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pkgcache"]

[tool.pytest.ini_options]
# The router's end-to-end tests are async; auto mode runs them without per-test markers.
asyncio_mode = "auto"
testpaths = ["tests"]
